feat(crates): complete native crate lifecycle
Co-Authored-By: Claude <noreply@anthropic.com>

Claude-Session: native-crates-completion